--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,54 +1,128 @@
 <section class="section-reviews" id="reviews">
   <div class="container container-reviews">
     <h2 class="visually-hidden">Customer Reviews</h2>
-    <div class="reviews__item">
-      <div class="reviews__picture-container">
-        <picture>
-          <source
-            srcset="
-              ./images/customer-reviews/customer-reviews-emily.webp    1x,
-              ./images/customer-reviews/customer-reviews-emily@2x.webp 2x
-            "
-            type="image/webp"
-          />
-          <source
-            srcset="
-              ./images/customer-reviews/customer-reviews-emily.png    1x,
-              ./images/customer-reviews/customer-reviews-emily@2x.png 2x
-            "
-            type="image/png"
-          />
-          <img src="" alt="emily comment" />
-        </picture>
+    <div class="multiple-items">
+      <div class="reviews__item">
+        <div class="reviews__picture-container">
+          <picture>
+            <source
+              srcset="
+                ./images/customer-reviews/customer-reviews-emily.webp    1x,
+                ./images/customer-reviews/customer-reviews-emily@2x.webp 2x
+              "
+              type="image/webp"
+            />
+            <source
+              srcset="
+                ./images/customer-reviews/customer-reviews-emily.png    1x,
+                ./images/customer-reviews/customer-reviews-emily@2x.png 2x
+              "
+              type="image/png"
+            />
+            <img src="" alt="emily comment" />
+          </picture>
+        </div>
+        <div class="reviews__comment">
+          <p class="reviews__text">
+            Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In
+            hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.
+          </p>
+        </div>
+
+        <p class="reviews__lable">Emily, Los Angeles</p>
+        <div class="reviews__markeкs">
+          <svg class="reviews__icon">
+            <use href="./images/svg/icons.svg#icon-home"></use>
+          </svg>
+          <svg class="reviews__icon">
+            <use href="./images/svg/icons.svg#icon-ellipse-grey"></use>
+          </svg>
+          <svg class="reviews__icon">
+            <use href="./images/svg/icons.svg#icon-ellipse-grey"></use>
+          </svg>
+        </div>
       </div>
-      <div class="reviews__comment">
-        <p class="reviews__text">
-          Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit
-          nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.
-        </p>
+
+      <div class="reviews__item">
+        <div class="reviews__picture-container">
+          <picture>
+            <source
+              srcset="
+                ./images/customer-reviews/customer-reviews-britney.webp    1x,
+                ./images/customer-reviews/customer-reviews-britney@2x.webp 2x
+              "
+              type="image/webp"
+            />
+            <source
+              srcset="
+                ./images/customer-reviews/customer-reviews-britney.png    1x,
+                ./images/customer-reviews/customer-reviews-britney@2x.png 2x
+              "
+              type="image/png"
+            />
+            <img src="" alt="britney comment" />
+          </picture>
+        </div>
+        <div class="reviews__comment">
+          <p class="reviews__text">
+            Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In
+            hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.
+          </p>
+        </div>
+
+        <p class="reviews__lable">Britney, New York</p>
+        <div class="reviews__markeкs">
+          <svg class="reviews__icon">
+            <use href="./images/svg/icons.svg#icon-ellipse-grey"></use>
+          </svg>
+          <svg class="reviews__icon">
+            <use href="./images/svg/icons.svg#icon-home"></use>
+          </svg>
+          <svg class="reviews__icon">
+            <use href="./images/svg/icons.svg#icon-ellipse-grey"></use>
+          </svg>
+        </div>
       </div>
-      <div class="slider__markeкs">
-        <svg class="slider__markeкs-icon">
-          <use href="./images/svg/icons.svg#icon-ellipse-red"></use>
-        </svg>
-        <svg class="slider__markeкs-icon">
-          <use href="./images/svg/icons.svg#icon-ellipse-red"></use>
-        </svg>
-        <svg class="slider__markeкs-icon">
-          <use href="./images/svg/icons.svg#icon-ellipse-red"></use>
-        </svg>
-      </div>
-      <p class="reviews__lable">Emily, Los Angeles</p>
-      <div class="reviews__markeкs">
-        <svg class="reviews__icon">
-          <use href="./images/svg/icons.svg#icon-home"></use>
-        </svg>
-        <svg class="reviews__icon">
-          <use href="./images/svg/icons.svg#icon-ellipse-grey"></use>
-        </svg>
-        <svg class="reviews__icon">
-          <use href="./images/svg/icons.svg#icon-ellipse-grey"></use>
-        </svg>
+
+      <div class="reviews__item">
+        <div class="reviews__picture-container">
+          <picture>
+            <source
+              srcset="
+                ./images/customer-reviews/customer-reviews-sara.webp    1x,
+                ./images/customer-reviews/customer-reviews-sara@2x.webp 2x
+              "
+              type="image/webp"
+            />
+            <source
+              srcset="
+                ./images/customer-reviews/customer-reviews-sara.png    1x,
+                ./images/customer-reviews/customer-reviews-sara@2x.png 2x
+              "
+              type="image/png"
+            />
+            <img src="" alt="sara comment" />
+          </picture>
+        </div>
+        <div class="reviews__comment">
+          <p class="reviews__text">
+            Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In
+            hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.
+          </p>
+        </div>
+
+        <p class="reviews__lable">Sara, San Diego</p>
+        <div class="reviews__markeкs">
+          <svg class="reviews__icon">
+            <use href="./images/svg/icons.svg#icon-ellipse-grey"></use>
+          </svg>
+          <svg class="reviews__icon">
+            <use href="./images/svg/icons.svg#icon-ellipse-grey"></use>
+          </svg>
+          <svg class="reviews__icon">
+            <use href="./images/svg/icons.svg#icon-home"></use>
+          </svg>
+        </div>
       </div>
     </div>
   </div>
