подключил общий контейнер

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,5 +1,5 @@
 <section class="section-products" id="products">
-  <div class="container-products">
+  <div class="container container-products">
     <p class="section-products__label section-products__label--margin">100% natural</p>
     <h2 class="section-products__title section-products__title--margin">products</h2>
     <ul class="products">
