--- a/src/sass/layout/_products.scss
+++ b/src/sass/layout/_products.scss
@@ -14,22 +14,7 @@
 }
 
 // container
-.container-products {
-  min-width: 320px;
-  padding-left: 20px;
-  padding-right: 20px;
-  margin: 0 auto;
-
-  @media screen and (min-width: 480px) {
-    width: 480px;
-  }
-
-  @media screen and (min-width: 768px) {
-    width: 768px;
-    padding-left: 34px;
-    padding-right: 34px;
-  }
-
+.container.container-products {
   @media screen and (min-width: 1200px) {
     width: 1200px;
     padding-left: 75px;
