--- a/src/partials/hiro.html
+++ b/src/partials/hiro.html
@@ -6,10 +6,10 @@
 
             <div class="hero__description">
 
-              <h1 class="hero-title"><span class="hero-title__part">ice cream made with</span> passion</h1>
+              <h1 class="hero-title">ice cream made with<span class="hero-title__part"> passion</span></h1>
     
                 <ul class="btn-colection list">
-                   <li class="btn-colection__item"><button class="btn-pre-hero" type="button">Products</button></li>
+                   <li class="btn-colection__item"><button class="btn-pre-hero__one" type="button">Products</button></li>
                    <li class="btn-colection__item"><button class="btn-pre-hero" type="button">How it’s made?</button></li>
                 </ul>
 
