--- a/src/sass/layout/_hiro.scss
+++ b/src/sass/layout/_hiro.scss
@@ -1,25 +1,25 @@
 .hero {
   width: 100%;
   background: var(--background-pink);
-}
-
-.hero__container {
-  position: relative;
   padding-top: 193px;
   padding-bottom: 160px;
-  display: flex;
-  justify-content: space-between;
   overflow: hidden;
 
   @media screen and (min-width: 768px) {
-    padding-top: 94px;
+    padding-top: 102px;
     padding-bottom: 0;
   }
 
   @media screen and (min-width: 1200px) {
-    padding-top: 156px;
-      
-  } 
+    padding-top: 180px;
+  }
+}
+
+.hero__container {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+   
 }
 
 .hero__container--left {
@@ -38,7 +38,7 @@
   @media screen and (min-width: 768px) {
     display: flex;
     flex-direction: column;
-    margin-left: 120px;
+    margin-left: 150px;
     margin-bottom: 34px;
     }
 
@@ -64,7 +64,7 @@
 }
 .ice-cream__pic {
   position: absolute;
-  bottom: 0;
+  bottom: -160px;
   right: 32px;
   z-index: 8;
   
@@ -84,15 +84,15 @@
   @media screen and (min-width: 768px) {
     width: 324px;
     height: 324px;
-    top: -56px;
+    top: -35px;
     right: -94px;
   }
   
   @media screen and (min-width: 1200px) {
     width: 538px;
     height: 538px;
-    top: -56px;
-    right: -183px;
+    top: -37px;
+    right: -215px;
   }
 
   }
@@ -100,6 +100,7 @@
 
   @media screen and (min-width: 768px) {
     right: 247px;
+    bottom: 0;
     }
 
   @media screen and (min-width: 1200px) {
@@ -124,28 +125,25 @@
 }
 
 .hero-title {
-  display: block;
   width: 218px;
   font-family: Titan One;
   font-style: normal;
   font-weight: normal;
-  font-size: 34px;
-  line-height: 1.08;
+  font-size: 26px;
+  line-height: 30px;
   letter-spacing: 0.04em;
   text-transform: uppercase;
-  color: var(--accent-color);
+  color: var(--primary-white-color);
 
   @media screen and (min-width: 768px) {
-    margin-bottom: 20px;
-    font-size: 38px;
-    line-height: 1.08;
+    font-size: 22px;
+    line-height: 26px;
     width: 162px;
   }
 
   @media screen and (min-width: 1200px) {
-    margin-bottom: 25px;
-    font-size: 58px;
-    line-height: 1.13;
+    font-size: 38px;
+    line-height: 44px;
     width: 277px;
   }
 
@@ -153,25 +151,27 @@
 }
 
 .hero-title__part {
+  display: block;
   font-family: Titan One;
   font-style: normal;
   font-weight: normal;
-  font-size: 26px;
-  line-height: 1.15;
+  font-size: 48px;
+  line-height: 46px;
   letter-spacing: 0.04em;
   text-transform: uppercase;
-  color: var(--primary-white-color);
-
-   @media screen and (min-width: 768px) {
-     margin-bottom: 20px;
-     font-size: 22px;
-     line-height: 1.13;
+  color: var(--accent-color);
+  margin-bottom: 19px;
+  
+  @media screen and (min-width: 768px) {
+    margin-bottom: 20px;
+    font-size: 34px;
+    line-height: 31px;
    }
 
    @media screen and (min-width: 1200px) {
      margin-bottom: 25px;
-     font-size: 38px;
-     line-height: 1.15;
+     font-size: 58px;
+     line-height: 53px;
    }
 }
 
@@ -184,7 +184,7 @@
   }
 
   @media screen and (min-width: 1200px) {
-    margin-bottom: 25px;
+    margin-bottom: 71px;
   }
 }
 .btn-colection__item {
@@ -219,6 +219,34 @@
     font-size: 14px;
     line-height: 1.28;
   }
+}
+
+.btn-pre-hero__one {
+   background: var(--primary-white-color);
+   border-radius: 22px;
+   border: none;
+   padding: 10px;
+   margin: 0 auto;
+   font-style: normal;
+   font-weight: bold;
+   font-size: 8px;
+   line-height: 1.25;
+   display: flex;
+   align-items: center;
+   text-align: center;
+   color: var(--accent-color);
+
+   &:hover,
+   &:focus {
+     background-color: var(--accent-color);
+     color: var(--primary-white-color);
+   }
+
+
+   @media screen and (min-width: 1200px) {
+     font-size: 14px;
+     line-height: 1.28;
+   }
 }
 
 .left__description--text {
