--- a/src/sass/layout/_products.scss
+++ b/src/sass/layout/_products.scss
@@ -415,6 +415,18 @@
   }
 }
 
+.recipe__title--color-ice-cream {
+  color: var(--accent-color);
+}
+
+.recipe__title--color-ice-coffee {
+  color: #7a4d0e;
+}
+
+.recipe__title--color-milkshakes {
+  color: #538a0d;
+}
+
 .recipe__lable {
   margin-bottom: 4px;
   font-weight: 700;
