--- a/src/sass/layout/_reviews.scss
+++ b/src/sass/layout/_reviews.scss
@@ -153,6 +153,18 @@
 
 // slider
 
+.slick-dotted.slick-slider {
+  margin-bottom: 0;
+}
+
+.slick-next {
+  right: 0;
+}
+.slick-prev {
+  left: 0;
+  z-index: 2;
+}
+
 .slick-dots li.slick-active button:before {
   opacity: 1;
   color: var(--accent-color);
