Исправляет ошибки в footer

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -31,6 +31,7 @@
 </p>
 </div>
 </div>
-<p class="footer__text">&copy 2019 - IceCream. All Rights Reserved.</p>
-    
+<div class="footer__copy">
+<p class="footer__text">&copy; 2021 - IceCream. All Rights Reserved.</p>
+</div>
 </footer>
