медиа для кнопок слайдера

--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,7 +1,7 @@
 <section class="section-reviews" id="reviews">
   <div class="container container-reviews">
     <h2 class="visually-hidden">Customer Reviews</h2>
-    <div class="multiple-items">
+    <div class="multiple-items reviews">
       <div class="reviews__item">
         <div class="reviews__picture-container">
           <picture>
