добавляет увеличение картинок

--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -64,7 +64,7 @@
               "
             />
 
-            <img src="#" alt="Ice-Cream" />
+            <img class="scale" src="#" alt="Ice-Cream" />
           </picture>
         </div>
 
@@ -121,7 +121,7 @@
               "
             />
 
-            <img src="#" alt="Ice-Cream" />
+            <img class="scale" src="#" alt="Ice-Cream" />
           </picture>
         </div>
 
@@ -180,7 +180,7 @@
               "
             />
 
-            <img src="#" alt="Ice-Cream" />
+            <img class="scale" src="#" alt="Ice-Cream" />
           </picture>
         </div>
         <div class="item">
@@ -236,7 +236,7 @@
               "
             />
 
-            <img src="#" alt="Ice-Cream" />
+            <img  class="scale" src="#" alt="Ice-Cream" />
           </picture>
         </div>
 
@@ -293,7 +293,7 @@
               "
             />
 
-            <img src="#" alt="Ice-Cream" />
+            <img  class="scale" src="#" alt="Ice-Cream" />
           </picture>
         </div>
         <div class="item">
@@ -349,7 +349,7 @@
               "
             />
 
-            <img src="#" alt="Ice-Cream" />
+            <img class="scale" src="#" alt="Ice-Cream" />
           </picture>
         </div>
         <div class="item">
@@ -405,7 +405,7 @@
               "
             />
 
-            <img src="#" alt="Ice-Cream" />
+            <img class="scale" src="#" alt="Ice-Cream" />
           </picture>
         </div>
         <div class="item">
@@ -461,7 +461,7 @@
               "
             />
 
-            <img src="#" alt="Ice-Cream" />
+            <img class="scale" src="#" alt="Ice-Cream" />
           </picture>
         </div>
       </div>
