--- a/src/partials/hiro.html
+++ b/src/partials/hiro.html
@@ -9,8 +9,8 @@
               <h1 class="hero-title">ice cream made with<span class="hero-title__part"> passion</span></h1>
     
                 <ul class="btn-colection list">
-                   <li class="btn-colection__item"><button class="btn-pre-hero__one" type="button">Products</button></li>
-                   <li class="btn-colection__item"><button class="btn-pre-hero" type="button">How it’s made?</button></li>
+                   <li class="btn-colection__item"><a class="btn-pre-hero__one" href="#products">Products</a></li>
+                   <li class="btn-colection__item"><a class="btn-pre-hero" href="#about">How it’s made?</a></li>
                 </ul>
 
             </div>
