--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -4,23 +4,23 @@
         <div class="container header-container">
 
             <nav class="header__nav">
-                <a class="header__logo" href=""><img src="/images//images_headder_hiro//logo 1.png" alt="/"></a>
+                <a class="header__logo" href="/index.html"><img src="/images//images_headder_hiro//logo 1.png" alt="/"></a>
                 <ul class="menu-list">
-                    <li class="menu-list__item"><a class="menu-list__link" href="">Home</a></li>
+                    <li class="menu-list__item"><a class="menu-list__link" href="/index.html">Home</a></li>
                     <li class="menu-list__item"><a class="menu-list__link" href="">About us</a></li>
-                    <li class="menu-list__item"><a class="menu-list__link" href="">How it’s made?</a></li>
-                    <li class="menu-list__item"><a class="menu-list__link" href="">Our products</a></li>
-                    <li class="menu-list__item"><a class="menu-list__link" href="">Contact</a></li>
+                    <li class="menu-list__item"><a class="menu-list__link" href="#about">How it’s made?</a></li>
+                    <li class="menu-list__item"><a class="menu-list__link" href="#products">Our products</a></li>
+                    <li class="menu-list__item"><a class="menu-list__link" href="#contacts">Contact</a></li>
                 </ul>
             </nav>
         <div class="btn-container">
             <button class="burger-btn" type="button" data-menu-open aria-expanded="false" aria-controls="mobile-menu">
-                <svg class="burger-icon" width="20" height="12" aria-label="Переключатель мобильного меню">
-                    <use href="/images/svg/icons.svg#icon-burger"></use>
+                <svg class="burger-icon" width="30" height="30" aria-label="Переключатель мобильного меню">
+                    <use href="/images/svg/icons.svg#icon-burger1"></use>
                 </svg>
             </button>
 
-            <button class="header-btn" type="button">Buy now<svg class="mobile-btn-icon" width="8" height="8">
+            <button class="header-btn" type="button" data-modal-open>Buy now<svg class="mobile-btn-icon" width="8" height="8">
                 <use href="/images/svg/icons.svg#icon-icon_button_right"></use></svg>
             </button>
         </div>
@@ -29,25 +29,26 @@
 
             <div class="mobile-menu" data-menu id="mobile-menu">
                 <button class="mobile-btn-close" type="button" data-menu-close>
-                    <svg class="mobile-close-icon" width="20" height="20">
-                        <use href="/images/svg/icons.svg#icon-burger-close"></use>
+                    <svg class="mobile-close-icon" width="15" height="15">
+                        <use href="/images/svg/icons.svg#icon-close"></use>
                     </svg>
                 </button>
 
-                <button class="mobile-btn" type="button">Buy now<svg class="mobile-btn-icon" width="8" height="8">
+                <button class="mobile-btn" type="button" data-modal-open>Buy now<svg class="mobile-btn-icon" width="8" height="8">
                         <use href="/images/svg/icons.svg#icon-icon_button_right"></use></svg></button>
             
                 <div>
                     <ul class="mobile-menu-list">
-                        <li class="mobile-menu-list__item"><a class="mobile-menu-list__link" href="">Home</a></li>
+                        <li class="mobile-menu-list__item"><a class="mobile-menu-list__link" href="/index.html">Home</a></li>
                         <li class="mobile-menu-list__item"><a class="mobile-menu-list__link" href="">About us</a></li>
-                        <li class="mobile-menu-list__item"><a class="mobile-menu-list__link" href="">How it’s made?</a></li>
-                        <li class="mobile-menu-list__item"><a class="mobile-menu-list__link" href="">Our products</a></li>
-                        <li class="mobile-menu-list__item"><a class="mobile-menu-list__link" href="">Contact</a></li>
+                        <li class="mobile-menu-list__item"><a class="mobile-menu-list__link" href="#about">How it’s made?</a></li>
+                        <li class="mobile-menu-list__item"><a class="mobile-menu-list__link" href="#products">Our products</a></li>
+                        <li class="mobile-menu-list__item"><a class="mobile-menu-list__link" href="#contacts">Contact</a></li>
 
                     </ul>
                 </div>
             </div>
+    
     </header>
 
   
