--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -23,8 +23,8 @@
                     </p>
                 </ul>
                 <button class="button-white" type="button">Read more
-                    <svg class="about__svg-btn" width="5" height="8"> 
-                        <use href=""></use>
+                    <svg class="mobile-svg-btn svgmargian" width="5" height="8"> 
+                        <use href="/images/svg/icons.svg#icon-icon_button_right"></use>
                     </svg>
                 </button>
             </div>
