--- a/src/sass/layout/_about.scss
+++ b/src/sass/layout/_about.scss
@@ -27,6 +27,15 @@ line-height: 1.16;
 text-align: center;
 text-transform: uppercase;
 color: #FFA5BA;
+margin-bottom: 15px;
+@media  screen and (min-width: 768px) {
+    font-size: 26px;
+    line-height: 30px;
+}
+ @media  screen and (min-width: 1280px) {
+    font-size: 30px;
+    line-height: 34px;
+ }
 }
 .section__title-about {
 font-family: Titan One;
@@ -35,38 +44,47 @@ line-height: 39px;
 text-align: center;
 letter-spacing: 0.04em;
 text-transform: uppercase;
-
+margin-bottom: 26px;
+@media  screen and (min-width: 768px) {
+    font-size: 48px;
+    line-height: 55px;
+    margin-bottom: 50px;
+}
+ @media  screen and (min-width: 1280px) {
+    font-size: 58px;
+    line-height: 66px;
+    margin-bottom: 55px;
+ }
 color: #D41443;
 }
 .about__flex {
     @media  screen and (min-width: 768px) {
         display: flex;
-        justify-content: center;
     }
      @media  screen and (min-width: 1280px) {
          display: flex;
-         justify-content: center;
      }
 }
 .about__img {
     display: block;
     height: auto;
-    margin: 0 auto;
+    margin: 0;
+    @media screen and (min-width: 1280px) {
+        height: 513px;
+        width: 513px;
+    }
 }
 .about__list {
-    margin: 0 auto;
-    @media screen and (min-width: 480px){
-        width: 220px;
-    }
+    margin: 0;
+     width: 220px;
     @media screen and (min-width: 768px) {
-        padding-top: 50px;
         margin-left: 17px;
         width: 340px;
     }
     @media screen and (min-width: 1280px) {
         padding-top: 51px;
         margin-left: 74px;
-        width: 463px;
+        width: 500px;
     }
 }
 .about__description {
@@ -81,11 +99,13 @@ color: #000000;
         font-size: 14px;
         line-height: 1.76;
         letter-spacing: 0.04em;
+        padding-top: 50px;
     }
     @media screen and (min-width: 1280px){
         margin-bottom: 35px;
-        font-size: 14px;
+        font-size: 16px;
         line-height: 1.92;
+        padding-top: 50px;
     }
 }
 .about__text {
@@ -102,6 +122,7 @@ color: #907E82;
     @media screen and (min-width: 1280px){
         margin-bottom: 45px;
         line-height: 1.92;
+        font-size: 16px;
     }
 }
 .about__note {
@@ -118,13 +139,11 @@ color: #907E82;
     }
     @media screen and (min-width: 1280px){
         line-height: 1.92;
+        font-size: 16px;
     }
 }
 .about__text .about__note {
     margin-bottom: 20px;
-}
-.text--position {
-    text-align: center;
 }
 .button-white {
     font-family: DM Sans;
@@ -134,14 +153,22 @@ color: #907E82;
     line-height: 1.28;
     align-items: center;
     text-align: center;
-    padding: 12px 37px;
+    padding: 12px 31px;
     color: #d41443;
     width: 176px;
     height: 44px;
     background: #fff;
     border-radius: 22px;
     border: none;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     @media screen and (min-width: 768px) {
         font-size: 16px;
     }
+    &:focus,
+    &:hover {
+        background-color: #ECEBEB;
+    }
+}
+.svgmargian {
+    margin-left: 13px;
 }
