--- a/src/sass/layout/_reviews.scss
+++ b/src/sass/layout/_reviews.scss
@@ -1,5 +1,9 @@
 .section-reviews {
-  padding-top: 120px;
+  padding-top: 80px;
+
+  @media screen and (min-width: 768px) {
+    padding-top: 120px;
+  }
 }
 
 .container.container-reviews {
