--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,4 +1,4 @@
-<section class="section section__about">
+<section class="section section__about" id="about">
     <div class="container">
         <p class="section__label-about">tradition and love </p>
         <h2 class="section__title-about">how it’s made?</h2>
