--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -21,7 +21,7 @@
                             <input class="hiro-form-input" name="user-name" minlength="2" 
                             pattern="[a-zA-Zа-яёА-ЯЁ]+" title="Имя должно содержать символы кириллицы или латиницы" type="text" placeholder="Name" required>
                             <svg class="modal-form-icon" width="18" height="18">
-                                <use href=""></use>
+                                <use href="/images/svg/icons.svg#icon-person-black-icon"></use>
                             </svg>
                         </span>
                     </label>
@@ -31,7 +31,7 @@
                         <span class="modal-form-block">
                             <input class="hiro-form-input" name="email" type="email" placeholder="example@gmail.com" required>
                             <svg class="modal-form-icon" width="18" height="18">
-                                <use href=""></use>
+                                <use href="/images/svg/icons.svg#icon-email-black-icon"></use>
                             </svg>
                         </span>
                     </label>
@@ -42,7 +42,7 @@
                             <input class="hiro-form-input" type="tel" name="user-tel" placeholder="+380-00-000-00-00"
                             pattern="^\+380-\d{2}-\d{3}-\d{2}-\d{2}$" title="Номер должен содержать пробелы" required>
                             <svg class="modal-form-icon" width="18" height="18">
-                                <use href=""></use>
+                                <use href="/images/svg/icons.svg#icon-phone-black-icon"></use>
                             </svg>
                         </span>
                     </label>
