--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -107,27 +107,26 @@
 }
 
 .burger-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-color: transparent;
   cursor: pointer;
   padding: 0;
   line-height: 0;
   border: none;
-  transition: color var();
 
-  &:hover {
-    color: var(--accent-color);
-  }
-
-  &:focus {
-    color: var(--accent-color);
-  }
-
-  @media screen and (min-width: 1199px) {
-    display: none;
+  &:hover .burger-icon,
+  &:focus .burger-icon {
+    fill: var(--accent-color);
   }
 
   @media screen and (min-width: 768px) {
     margin-right: 30px;
+  }
+
+  @media screen and (min-width: 1199px) {
+    display: none;
   }
 }
 
@@ -141,21 +140,15 @@
   width: 100vw;
   height: 100vh;
   padding-top: 60px;
-  background-color: var(--background-menu);
-  opacity: 0;
-  visibility: hidden;
-  pointer-events: none;
+  background-color: var(--background-menu);  
+  transform: translateX(100%);
+  transition: transform 1s cubic-bezier(0.4, 0, 0.2, 1);
 
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-  &.is-open {
-    opacity: 1;
-    visibility: visible;
-    pointer-events: all;
+  &.is-open {   
+    transform: translateX(0%); 
 
     @media screen and (min-width: 480px) {
       width: 254px;
-      height: 1020px;
     }
 
     @media screen and (min-width: 1200px) {
@@ -165,6 +158,9 @@
 }
 
 .mobile-btn-close {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   position: absolute;
   top: 10px;
   right: 15px;
@@ -175,21 +171,20 @@
   padding: 0;
   line-height: 0;
   border: none;
-  color: var();
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-  &:hover {
-    color: var(--accent-color);
-  }
-
-  &:focus {
-    color: var(--accent-color);
+  
+  &:hover .mobile-close-icon,
+  &:focus .mobile-close-icon {
+    fill: var(--accent-color);
   }
 }
 
 .burger-icon,
 .mobile-close-icon {
-  fill: currentColor;
+  fill: var(--primary-white-color);
+  display: block;
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .mobile-btn {
