--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -34,7 +34,7 @@
                     </svg>
                 </button>
 
-                <button class="mobile-btn" type="button" data-modal-open>Buy now<svg class="mobile-btn-icon" width="8" height="8">
+                <button class="mobile-btn" type="button" data-mobile-modal-open>Buy now<svg class="mobile-btn-icon" width="8" height="8">
                         <use href="/images/svg/icons.svg#icon-icon_button_right"></use></svg></button>
             
                 <div>
