--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,33 +1,33 @@
-<section class="section section__about" id="about">
-    <div class="container">
-        <p class="section__label-about">tradition and love </p>
-        <h2 class="section__title-about">how it’s made?</h2>
-        <div class="about__flex">
-            <div class="about__img">
-                <picture>
-                    <source srcset="/images/about/dekstop/cow-dekstop.png 1x, /images/about/dekstop/cow-dekstop@2x.png 2x" media="(min-width: 1280px)" type="image/png" >
-                    <source srcset="/images/about/tablet/cow-tablet.png 1x, /images/about/tablet/cow-tablet@2x.png 2x" media="(min-width: 768px)" type="image/png">
-                    <source srcset="/images/about/mobile/cow-mobile.png 1x, /images/about/mobile/cow-mobile@2x.png 2x" type="image/png">
-                    <img class="about__img" src="/images/about/dekstop/cow-dekstop.png" alt="cow/milk">
-                </picture>
+ <section class="section section__about">
+            <div class="container-about">
+                <p class="section__label-about">tradition and love </p>
+                <h2 class="section__title-about">how it’s made?</h2>
+                <div class="about__flex">
+                    <div class="about__img">
+                        <picture>
+                            <source srcset="/images/about/dekstop/cow-dekstop.png 1x, /images/about/dekstop/cow-dekstop@2x.png 2x" media="(min-width: 1200px)" type="image/png" >
+                            <source srcset="/images/about/tablet/cow-tablet.png 1x, /images/about/tablet/cow-tablet@2x.png 2x" media="(min-width: 768px)" type="image/png">
+                            <source srcset="/images/about/mobile/cow-mobile.png 1x, /images/about/mobile/cow-mobile@2x.png 2x" type="image/png">
+                            <img class="about__img" src="/images/about/dekstop/cow-dekstop.png" alt="cow/milk">
+                        </picture>
+                    </div>
+                    <div class="about__list">
+                            <p class="about__description">
+                                Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus, faucibus lorem eget, egestas eros. Maecenas eleifend erat at justo fringilla.
+                            </p>
+                            <p class="about__text">
+                                Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris rhoncus orci in imperdiet placerat. Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh, tincidunt.
+                            </p>
+                            <p class="about__note">
+                                Aliquam erat volutpat. Aenean accumsan.
+                            </p>
+                        </ul>
+                        <button class="button-white" type="button">Read more
+                            <svg class="mobile-svg-btn svgmargian" width="5" height="8"> 
+                                <use href="/images/svg/icons.svg#icon-icon_button_right"></use>
+                            </svg>
+                        </button>
+                    </div>
+                </div>
             </div>
-            <div class="about__list">
-                    <p class="about__description">
-                        Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus, faucibus lorem eget, egestas eros. Maecenas eleifend erat at justo fringilla.
-                    </p>
-                    <p class="about__text">
-                        Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris rhoncus orci in imperdiet placerat. Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh, tincidunt.
-                    </p>
-                    <p class="about__note">
-                        Aliquam erat volutpat. Aenean accumsan.
-                    </p>
-                </ul>
-                <button class="button-white" type="button">Read more
-                    <svg class="mobile-svg-btn svgmargian" width="5" height="8"> 
-                        <use href="/images/svg/icons.svg#icon-icon_button_right"></use>
-                    </svg>
-                </button>
-            </div>
-        </div>
-    </div>
-</section>
+        </section>
