--- a/src/sass/layout/_about.scss
+++ b/src/sass/layout/_about.scss
@@ -1,3 +1,26 @@
+.container-about {
+    min-width: 320px;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin: 0 auto;
+    align-items: center;
+    @media screen and (min-width: 480px) {
+      width: 480px;
+      justify-content: center;
+      }
+  
+    @media screen and (min-width: 768px) {
+      width: 768px;
+      padding-left: 34px;
+      padding-right: 34px;
+    }
+  
+    @media screen and (min-width: 1200px) {
+      width: 1200px;
+      padding-left: 72px;
+      padding-right: 75px;
+    }
+  }
 .section__about {
     position: relative;
     background: #fff5f6;
@@ -5,7 +28,7 @@
     padding-bottom: 39px;
     background-repeat: no-repeat;
     background-size: contain;
-    @media screen and (min-width: 1280px) {
+    @media screen and (min-width: 1200px) {
         background-image: url("/images/about/dekstop/bg-dekstop.png");
         background-position: 0 100%;
         background-repeat: no-repeat;
@@ -67,16 +90,18 @@ color: #D41443;
 }
 .about__img {
     display: block;
-    height: auto;
-    margin: 0;
+    margin: 0 auto;
     @media screen and (min-width: 1280px) {
-        height: 513px;
-        width: 513px;
+        margin: 0;
+        justify-content: center;
     }
 }
 .about__list {
-    margin: 0;
-     width: 220px;
+    margin: 0 auto;
+    @media screen and (min-width: 350px) {
+        width: 220px;
+        justify-content: center;
+    }
     @media screen and (min-width: 768px) {
         margin-left: 17px;
         width: 340px;
@@ -84,7 +109,7 @@ color: #D41443;
     @media screen and (min-width: 1280px) {
         padding-top: 51px;
         margin-left: 74px;
-        width: 500px;
+        width: 465px;
     }
 }
 .about__description {
@@ -105,7 +130,6 @@ color: #000000;
         margin-bottom: 35px;
         font-size: 16px;
         line-height: 1.92;
-        padding-top: 50px;
     }
 }
 .about__text {
@@ -120,7 +144,7 @@ color: #907E82;
         letter-spacing: 0.04em;
     }
     @media screen and (min-width: 1280px){
-        margin-bottom: 45px;
+        margin-bottom: 20px;
         line-height: 1.92;
         font-size: 16px;
     }
