--- a/src/sass/layout/_contacts.scss
+++ b/src/sass/layout/_contacts.scss
@@ -43,10 +43,10 @@
 }
 .contacts-list {
   margin-left: auto;
-margin-right: auto;
+  margin-right: auto;
   @media screen and (min-width: 768px) {
     display: flex;
-    
+
     align-items: center;
     justify-content: center;
     margin-left: -20px;
@@ -255,4 +255,35 @@ margin-right: auto;
 .contacts-button__franchise {
   background-color: var(--primary-white-color);
   color: var(--accent-color);
+}
+
+.contacts-modal {
+  padding: 40px 10px 10px 10px;
+  width: 99%;
+  height: auto;
+  @media screen and (min-width: 768px) {
+    width: 60%;
+    height: auto;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 30%;
+    height: auto;
+  }
+}
+
+.map {
+ position: relative;
+  padding-bottom: 90%; /* задаёт высоту контейнера для 16:9 (если 4:3 — поставьте 75%) */
+  height: 0;
+  overflow: hidden;
+}
+
+.map iframe {
+position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-width: 0;
+  outline-width: 0;
 }
