--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -4,7 +4,7 @@
         <div class="container header-container">
 
             <nav class="header__nav">
-                <a class="header__logo" href="/index.html"><img src="/images//images_headder_hiro//logo 1.png" alt="/"></a>
+                <a class="header__logo" href="/index.html"><img src="/images//images_headder_hiro//logo.png" alt="logo"></a>
                 <ul class="menu-list">
                     <li class="menu-list__item"><a class="menu-list__link" href="/index.html">Home</a></li>
                     <li class="menu-list__item"><a class="menu-list__link" href="">About us</a></li>
