прописывает путь базовой картинки

--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -19,7 +19,7 @@
               "
               type="image/png"
             />
-            <img src="" alt="emily comment" />
+            <img src="./images/customer-reviews/customer-reviews-emily.png" alt="emily comment" />
           </picture>
         </div>
         <div class="reviews__comment">
@@ -60,7 +60,10 @@
               "
               type="image/png"
             />
-            <img src="" alt="britney comment" />
+            <img
+              src="./images/customer-reviews/customer-reviews-britney.png"
+              alt="britney comment"
+            />
           </picture>
         </div>
         <div class="reviews__comment">
@@ -101,7 +104,7 @@
               "
               type="image/png"
             />
-            <img src="" alt="sara comment" />
+            <img src="./images/customer-reviews/customer-reviews-sara.png" alt="sara comment" />
           </picture>
         </div>
         <div class="reviews__comment">
