--- a/src/partials/hiro.html
+++ b/src/partials/hiro.html
@@ -36,7 +36,7 @@
             
 
             </div>
-            <div class="ice-cream__pic">
+            <div class="ice-cream__pic fadeInLeft">
                 <picture>
                     <source srcset="/images/images_headder_hiro/dekstop/ice-dekstop.png 1x, /images/images_headder_hiro/dekstop/ice-dekstop@2x.png 2x" media="(min-width: 1280px)" type="image/png" >
                     <source srcset="/images/images_headder_hiro/tablet/ice-tablet.png 1x, /images/images_headder_hiro/tablet/ice-tablet@2x.png 2x" media="(min-width: 768px)" type="image/png">
