--- a/src/sass/layout/_hiro.scss
+++ b/src/sass/layout/_hiro.scss
@@ -79,6 +79,10 @@
     top: -9px;
     right: -94px;
     border-radius: 50%;
+    animation-duration: 2000ms;
+    animation-name: zoomIn;
+    animation-fill-mode: backwards;
+    animation-delay: 1500ms;
      
 
   @media screen and (min-width: 768px) {
@@ -105,6 +109,34 @@
 
   @media screen and (min-width: 1200px) {
    right: 450px;
+  }
+}
+
+@keyframes fadeInLeft {
+  from {
+    opacity: 0;
+    transform: translate3d(-100%, 0, 0);
+  }
+
+  to {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+.fadeInLeft {
+  animation-name: fadeInLeft;
+  animation-duration: 2000ms;
+}
+
+@keyframes zoomIn {
+  from {
+    opacity: 0;
+    transform: scale3d(0.3, 0.3, 0.3);
+  }
+
+  to {
+    opacity: 1;
   }
 }
 
