--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,5 +1,6 @@
 <section class="section section_gallery">
   <div class="container container_galery">
+    <h2 class="visually-hidden">Gallery</h2>
     <div class="item_container">
       <div
         id="container"
@@ -57,7 +58,7 @@
             />
 
             <source
-              media="(min-width:1200px))"
+              media="(min-width:1200px)"
               srcset="
                 /images/gallery/desktop/ice-cream-1.jpeg      1x,
                 /images/gallery/desktop2x/ice-cream-1@2x.jpeg 2x
@@ -173,7 +174,7 @@
             />
 
             <source
-              media="(min-width:1200px))"
+              media="(min-width:1200px)"
               srcset="
                 /images/gallery/desktop/ice-cream-5.jpeg      1x,
                 /images/gallery/desktop2x/ice-cream-5@2x.jpeg 2x
@@ -229,7 +230,7 @@
             />
 
             <source
-              media="(min-width:1200px))"
+              media="(min-width:1200px)"
               srcset="
                 /images/gallery/desktop/ice-cream-3.jpeg      1x,
                 /images/gallery/desktop2x/ice-cream-3@2x.jpeg 2x
@@ -286,7 +287,7 @@
             />
 
             <source
-              media="(min-width:1200px))"
+              media="(min-width:1200px)"
               srcset="
                 /images/gallery/desktop/ice-cream-14.jpeg      1x,
                 /images/gallery/desktop2x/ice-cream-14@2x.jpeg 2x
@@ -342,7 +343,7 @@
             />
 
             <source
-              media="(min-width:1200px))"
+              media="(min-width:1200px)"
               srcset="
                 /images/gallery/desktop/ice-cream-4.jpeg      1x,
                 /images/gallery/desktop2x/ice-cream-4@2x.jpeg 2x
@@ -398,7 +399,7 @@
             />
 
             <source
-              media="(min-width:1200px))"
+              media="(min-width:1200px)"
               srcset="
                 /images/gallery/desktop/ice-cream-6.jpeg      1x,
                 /images/gallery/desktop2x/ice-cream-6@2x.jpeg 2x
@@ -454,7 +455,7 @@
             />
 
             <source
-              media="(min-width:1200px))"
+              media="(min-width:1200px)"
               srcset="
                 /images/gallery/desktop/ice-cream-7.jpeg      1x,
                 /images/gallery/desktop2x/ice-cream-7@2x.jpeg 2x
