--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -2,7 +2,7 @@
     <div class="container">
         <h2 class="visually-hidden">Contacts</h2>
         <ul class="contacts-list">
-            <li class="contacts-list__item">
+            <li class="contacts-list__item contacts-animation">
                 <b class="place-card">Cafe</b>
                 <div class="contacts-list__card-city">
                     <p class="city-card">Chicago</p>
@@ -25,7 +25,7 @@
                 <a class="contacts-number-card" href="tel:+61(0)383766284">+61(0) 383 766 284</a>
                 <a class="contacts-mail-card" href="mailto:noreply@envato.com">noreply@envato.com</a>
             </li>
-            <li class="contacts-list__item">
+            <li class="contacts-list__item contacts-animation">
                 <b class="place-card">Foodtruck</b>
                 <div class="contacts-list__card-city">
                     <p class="city-card">Los Angeles</p>
@@ -48,7 +48,7 @@
                 <a class="contacts-number-card" href="tel:+61(0)383766284">+61(0) 383 766 284</a>
                 <a class="contacts-mail-card" href="mailto:noreply@envato.com">noreply@envato.com</a>
             </li>
-            <li class="contacts-list__item">
+            <li class="contacts-list__item contacts-animation">
                 <b class="place-card">Cafe</b>
                 <div class="contacts-list__card-city">
                     <p class="city-card">New York</p>
