--- a/src/sass/layout/_contacts.scss
+++ b/src/sass/layout/_contacts.scss
@@ -186,6 +186,9 @@
 .contacts-mail-card {
   color: var(--text-color-gray);
   display: block;
+  transition-property: color;
+	transition-duration: 250ms;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   &:hover,
   &:focus {
     color: var(--accent-color);
@@ -235,7 +238,13 @@
   height: 44px;
   border: none;
   cursor: pointer;
-  &:hover {
+  opacity: 1;
+  transition-property: opacity;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    opacity: 0.7;
   }
 }
 
@@ -257,6 +266,7 @@
   color: var(--accent-color);
 }
 
+// modal
 .contacts-modal {
   padding: 40px 10px 10px 10px;
   width: 99%;
@@ -272,14 +282,14 @@
 }
 
 .map {
- position: relative;
-  padding-bottom: 90%; /* задаёт высоту контейнера для 16:9 (если 4:3 — поставьте 75%) */
+  position: relative;
+  padding-bottom: 90%;
   height: 0;
   overflow: hidden;
 }
 
 .map iframe {
-position: absolute;
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
@@ -287,3 +297,14 @@ position: absolute;
   border-width: 0;
   outline-width: 0;
 }
+
+.contacts-animation {
+    transition-property: transform;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+&:hover {
+   transform: translateY(-15px);
+  }
+}
+  
+
