--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -74,17 +74,13 @@
         </ul>
 
         <ul class="contacts-button-list">
-            <li class="contacts-button-list__item"><button class="contacts-button contacts-button__map" type="button"
+            <li class="contacts-button-list__item"><button class="contacts-button contacts-button__map"
                     contacts-modal-open>Our Locations
                     <svg class="contacts-button-icon">
                         <use href="./images/svg/icons.svg#icon-more"></use>
                     </svg></button>
-
-
-
             </li>
-            <li class="contacts-button-list__item"><button class="contacts-button contacts-button__franchise"
-                    type="button">Franchise
+            <li class="contacts-button-list__item"><button class="contacts-button contacts-button__franchise">Franchise
                     <svg class="contacts-button-icon">
                         <use href="./images/svg/icons.svg#icon-more"></use>
                     </svg></button></li>
@@ -94,15 +90,14 @@
 </section>
 
 <div class="backdrop is-hidden" contacts-modal>
-
-    <div class="modal contacts-modal">
-        <button class="button-close" type="button" contacts-modal-close>
+    <div class="modal contacts-modal-style">
+        <button class="button-close" contacts-modal-close>
             <svg class="close" width="11" height="11">
                 <use href="/images/svg/icons.svg#icon-close"></use>
             </svg>
         </button>
         <div class="map"><iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2541.8661565083057!2d30.531895015264162!3d50.42496529708262!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4d96f5139689b%3A0xa1f7c65300bebad1!2sGoIT!5e0!3m2!1sru!2sua!4v1639005581391!5m2!1sru!2sua"
-                style="border:0;" width="100%" height="100%" allowfullscreen="" loading="lazy"></iframe></div>
+                style="border:0;" allowfullscreen="" loading="lazy"></iframe></div>
     </div>
 </div>
