--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -75,7 +75,7 @@
 
         <ul class="contacts-button-list">
             <li class="contacts-button-list__item"><button class="contacts-button contacts-button__map"
-                    contacts-modal-open>Our Locations
+                    data-contacts-modal-open>Our Locations
                     <svg class="contacts-button-icon">
                         <use href="./images/svg/icons.svg#icon-more"></use>
                     </svg></button>
@@ -89,9 +89,9 @@
 
 </section>
 
-<div class="backdrop is-hidden" contacts-modal>
+<div class="backdrop is-hidden" data-contacts-modal>
     <div class="modal contacts-modal-style">
-        <button class="button-close" contacts-modal-close>
+        <button class="button-close" data-contacts-modal-close>
             <svg class="close" width="11" height="11">
                 <use href="/images/svg/icons.svg#icon-close"></use>
             </svg>
