розмер контейнера мобильной версии

--- a/src/sass/layout/_products.scss
+++ b/src/sass/layout/_products.scss
@@ -15,6 +15,10 @@
 
 // container
 .container.container-products {
+  @media screen and (max-width: 767px) {
+    max-width: 320px;
+  }
+
   @media screen and (min-width: 1200px) {
     width: 1200px;
     padding-left: 75px;
