--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -30,24 +30,26 @@
               </ul>
               <p class="recipe__lable recipe__title--color-ice-cream">рецепт приготовления</p>
 
-              <ul class="recipe-instructions">
-                <li class="recipe-instructions__item">
-                  <b>Шаг 1.</b> Очистите авокадо, удалите косточку, разрежьте на 6–8 кусочков и
-                  положите в пакет.
-                </li>
-                <li class="recipe-instructions__item">
-                  <b>Шаг 2.</b> Бананы очистите и нарежьте крупными кусочками, добавьте в пакет с
-                  авокадо. Плотно завяжите пакет и уберите в морозильник на 2 ч.
-                </li>
-                <li class="recipe-instructions__item">
-                  <b>Шаг 3.</b> Замороженные бананы и авокадо положите в чашу кухонного комбайна и
-                  измельчите до однородности. Добавьте лимонный сок и мед по вкусу и перемешивайте,
-                  пока масса не превратится в мороженое.
-                </li>
-                <li class="recipe-instructions__item">
-                  <b>Шаг 4.</b> Нарежьте клубнику маленькими кусочками и смешайте с мороженым.
-                </li>
-              </ul>
+              <div class="recipe-instructions--overflow">
+                <ul class="recipe-instructions">
+                  <li class="recipe-instructions__item">
+                    <b>Шаг 1.</b> Очистите авокадо, удалите косточку, разрежьте на 6–8 кусочков и
+                    положите в пакет.
+                  </li>
+                  <li class="recipe-instructions__item">
+                    <b>Шаг 2.</b> Бананы очистите и нарежьте крупными кусочками, добавьте в пакет с
+                    авокадо. Плотно завяжите пакет и уберите в морозильник на 2 ч.
+                  </li>
+                  <li class="recipe-instructions__item">
+                    <b>Шаг 3.</b> Замороженные бананы и авокадо положите в чашу кухонного комбайна и
+                    измельчите до однородности. Добавьте лимонный сок и мед по вкусу и
+                    перемешивайте, пока масса не превратится в мороженое.
+                  </li>
+                  <li class="recipe-instructions__item">
+                    <b>Шаг 4.</b> Нарежьте клубнику маленькими кусочками и смешайте с мороженым.
+                  </li>
+                </ul>
+              </div>
             </div>
             <button
               class="products__btn"
