--- a/src/sass/layout/_products.scss
+++ b/src/sass/layout/_products.scss
@@ -366,7 +366,7 @@
 .recipe {
   width: 100%;
   height: 95%;
-  padding: 20px 20px 40px;
+  padding: 35px;
   border-radius: 24px;
 
   display: flex;
@@ -449,4 +449,11 @@
 
 .recipe-instructions__item {
   margin-bottom: 5px;
+}
+
+.recipe-instructions--overflow {
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    height: 200px;
+    overflow: auto;
+  }
 }
