--- a/src/sass/layout/_contacts.scss
+++ b/src/sass/layout/_contacts.scss
@@ -59,6 +59,9 @@
 }
 
 .contacts-list__item {
+  margin-right: auto;
+  margin-left: auto;
+
   margin-bottom: 20px;
   padding: 43px 20px;
 
@@ -67,8 +70,13 @@
   background: var(--primary-white-color);
   box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
   border-radius: 24px;
+
   &:last-child {
     margin-bottom: 0;
+  }
+
+  @media screen and (max-width: 1199px) {
+    width: 220px;
   }
   @media screen and (min-width: 768px) {
     margin-left: 20px;
@@ -88,22 +96,27 @@
 }
 
 .contacts-list__card-city {
+  margin-bottom: 25px;
+  @media screen and (min-width: 768px) {
+    margin-bottom: 30px;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 32px;
+  }
 }
 
-.contacts-list__card-city,
 .contacts-list__card-time {
-  &::after {
-    display: block;
-    width: 100%;
-    margin: 25px 0;
-    content: '';
-    border-bottom: 1px solid var(--line-contacts);
-    @media screen and (min-width: 768px) {
-      margin: 30px 0;
-    }
-    @media screen and (min-width: 1200px) {
-      margin: 32px 0;
-    }
+  padding: 25px 0;
+  margin-bottom: 25px;
+  border-top: 1px solid var(--line-contacts);
+  border-bottom: 1px solid var(--line-contacts);
+  @media screen and (min-width: 768px) {
+    padding: 30px 0;
+    margin-bottom: 30px;
+  }
+  @media screen and (min-width: 1200px) {
+    padding: 32px 0;
+    margin-bottom: 32px;
   }
 }
 
@@ -187,8 +200,8 @@
   color: var(--text-color-gray);
   display: block;
   transition-property: color;
-	transition-duration: 250ms;
-	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   &:hover,
   &:focus {
     color: var(--accent-color);
@@ -299,12 +312,10 @@
 }
 
 .contacts-animation {
-    transition-property: transform;
+  transition-property: transform;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-&:hover {
-   transform: translateY(-15px);
+  &:hover {
+    transform: translateY(-15px);
   }
 }
-  
-
